# Visual-Compiler

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt
Enums/: segmentsenum.h
Include/: cPlusPlusLibrary.h  qtLibrary.h
Server/ControlBlock/: controlblock.cpp  controlblock.h
Server/Controller/: controller.cpp  controller.h
Server/Ram/: test.h
Server/Ram/RamController/: RamController.cpp  RamController.h
Server/Ram/Sections/AbstRam/: absram.cpp  absram.h
Server/Ram/Sections/Bss/: bss.cpp  bss.h
Server/Ram/Sections/Data/: data.cpp  data.h
Server/Ram/Sections/Heap/: heap.cpp  heap.h
Server/Ram/Sections/ReadOnly/: readonly.cpp  readonly.h
Server/Ram/Sections/Stack/: stack.cpp  stack.h
Server/Ram/Sections/SymTab/: SymTab.cpp  SymTab.h
Server/Statements/Function/: function.cpp  function.h
Server/Statements/Scope/: scope.cpp  scope.h
UserInterface/UIHeaders/: mainwindow.h  ramsegment.h  ramslot.h  styleutils.h  uiinterface.h
UserInterface/UISources/: main.cpp  mainwindow.cpp  ramsegment.cpp  ramslot.cpp  styleutils.cpp  uiinterface.cpp
